--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,23 @@
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2020/01/24/09/23/bar-4789760_1280.jpg);">
+  <div class="container" style='text-align: center'>
+    <h1>MR <strong>Cocktails</strong></h1>
+<!--     <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a> -->
+  </div>
+</div>
+
+
+
 <div class='container mt-3'>
-  <div class='row'>
+  <div class="cards">
     <% @cocktails.each do |cocktail| %>
-    <div class='col-4'>
-      <h1><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h1>
+    <div class="card-product">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+      <div class="card-product-infos">
+        <h2><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
     </div>
     <% end %>
   </div>
 </div>
-
