--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,4 +1,11 @@
-<div class='navbar navbar-expand-sm navbar-light' style='justify-content: space-between;'>
-  <%= link_to 'Cocktails', cocktails_path %>
-  <%= link_to 'Add cocktail', new_cocktail_path %>
-</div>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <a class="navbar-brand" href="#"><%= link_to 'MR Cocktails', cocktails_path %></a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-direction: row-reverse;">
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><%= link_to 'Add cocktail', new_cocktail_path %></button>
+    </form>
+  </div>
+</nav>
