banner and body style

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,16 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2020/01/24/09/23/bar-4789760_1280.jpg);">
+<!-- <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2020/01/24/09/23/bar-4789760_1280.jpg);">
   <div class="container" style='text-align: center'>
     <h1>MR <strong>Cocktails</strong></h1>
-<!--     <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn btn-flat" href="#">Apply now</a> -->
+  </div>
+</div> -->
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2020/01/24/09/23/bar-4789760_1280.jpg);">
+  <div class="banner-content" style='text-align: center'>
+    <h1>MR <strong>Cocktails</strong></h1>
+    <p>Best cocktails</p>
+    <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
-
 
 
 <div class='container mt-3'>
