--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div> -->
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2020/01/24/09/23/bar-4789760_1280.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2020/01/24/09/23/bar-4789760_1280.jpg); object-fit: cover; object-position: center;">
   <div class="banner-content" style='text-align: center'>
     <h1>MR <strong>Cocktails</strong></h1>
     <p>Best cocktails</p>
@@ -16,13 +16,12 @@
 <div class='container mt-3'>
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
-    <div class="card-product">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-      <div class="card-product-infos">
-        <h2><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h2>
-        <p>Product description with <strong>relevant info</strong> only.</p>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.lacucinaitaliana.it/wp-content/uploads/2016/07/13132122/cocktailLAND.jpg)">
+        <h2 class='cocktail_name'><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h2>
       </div>
-    </div>
     <% end %>
   </div>
 </div>
+
+
+
