--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class='container' style='margin-top: 100px;'>
+<!-- <div class='container' style='margin-top: 100px;'>
 <div class="card-product">
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
   <div class="card-product-infos" style='width: 400px;'>
@@ -23,4 +23,26 @@
     data: { confirm: "Are you sure?"}
   %></h1>
 </div>
+</div>
+ -->
+
+<div class='container'>
+  <h2><%= @cocktail.name %></h2>
+  <% @cocktail.doses.each do |dose| %>
+  <div style='display: flex; align-items: baseline;'>
+    <p style='margin-right: 5px;'>Ingredient: <%= dose.ingredient.name %></p>
+    <p style='margin-right: 5px;'>Dose: <%= dose.description %></p>
+    <%= link_to 'x',
+    dose_path(dose),
+      method: :delete,
+      data: { confirm: "Are you sure?"}
+  %>
+  </div>
+  <% end %>
+  <%= link_to 'Add ingredient', new_cocktail_dose_path(@cocktail.id) %>
+    <h1 style='margin-left: 300px;'><%= link_to 'X',
+    cocktail_path(@cocktail.id),
+    method: :delete,
+    data: { confirm: "Are you sure?"}
+  %></h1>
 </div>
