--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -16,7 +16,11 @@
 <div class='container mt-3'>
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
+    <% if cocktail.photo.attached? %>
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>)">
+    <% else %>
+      <div class="card-category">
+    <% end %>
         <h2 class='cocktail_name'><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h2>
       </div>
     <% end %>
