--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,4 @@
-<div class='container new'>
+<div class='container' style='margin-top: 100px;'>
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
     <%= f.input :photo, as: :file %>
