--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,21 +1,43 @@
 
-<div class='container'>
-  <h2><%= @cocktail.name %></h2>
+<div class='container text-center mt-6 show' style='margin-top: 100px;'>
+  <div class='title'>
+  <h2 style='font-style: italic; margin-bottom: 85px; color: seashell; font-size: xxx-large; font-family: initial;'><%= @cocktail.name %></h2>
+  </div>
+    <div class="row w-50 mx-auto mt-2 p-2 align-items-center">
+    <div class="col-sm">
+      <span>Dose</span>
+    </div>
+    <div class="col-6">
+      <span>Ingredient</span>
+    </div>
+    <div class="col-sm">
+      <span>Delete</span>
+    </div>
+  </div>
   <% @cocktail.doses.each do |dose| %>
-  <div style='display: flex; align-items: baseline;'>
-    <p style='margin-right: 5px;'>Ingredient: <%= dose.ingredient.name %></p>
-    <p style='margin-right: 5px;'>Dose: <%= dose.description %></p>
-    <%= link_to 'x',
+    <div class="row bg-white w-50 mx-auto mt-2 p-2 align-items-center">
+    <div class="col-sm">
+      <span><%= dose.description %></span>
+    </div>
+    <div class="col-6">
+      <span><%= dose.ingredient.name %></span>
+    </div>
+    <div class="col-sm">
+      <%= link_to '<i class="fas fa-trash"></i>'.html_safe,
     dose_path(dose),
       method: :delete,
       data: { confirm: "Are you sure?"}
-  %>
+    %>
+    </div>
   </div>
   <% end %>
-  <%= link_to 'Add ingredient', new_cocktail_dose_path(@cocktail.id) %>
-    <h1 style='margin-left: 300px;'><%= link_to 'X',
+    <h1 class='mt-3'><%= link_to 'Add ingredient', new_cocktail_dose_path(@cocktail.id), class: "btn btn-gradient"%></h1>
+    <h1 class='mt-3'><%= link_to '<i class="far fa-trash-alt"></i>'.html_safe,
     cocktail_path(@cocktail.id),
     method: :delete,
     data: { confirm: "Are you sure?"}
   %></h1>
 </div>
+
+
+
