--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,4 +1,4 @@
-<div class='container new'>
+<div class='container'style='margin-top: 100px;'>
   <%= simple_form_for [@cocktail, @dose] do |f| %>
     <%= f.input :description %>
     <%= f.input :ingredient_id, collection: Ingredient.all %>
