--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body style='background-image: url(https://i.pinimg.com/originals/19/fc/21/19fc21dc1f8a339ea8f302c75320a28f.jpg); object-fit: cover; object-position: center;'>
+  <body style='background: url(https://i.pinimg.com/originals/19/fc/21/19fc21dc1f8a339ea8f302c75320a28f.jpg) no-repeat center fixed; background-size: cover;'>
     <%= render 'components/navbar' %>
       <%= yield %>
   </body>
