--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 
-<div class='container mt-3'>
+<div class='container mt-3 mb-1'>
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
     <% if cocktail.photo.attached? %>
