--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand navbar-light bg-dark fixed-top" style='opacity: .9;'>
-  <a class="navbar-brand" href="#"><%= link_to '<i class="fas fa-cocktail" style="color: yellow; font-size: 20px;"></i>'.html_safe, cocktails_path %></a>
+  <a class="navbar-brand" href="#"><%= link_to '<i class="fas fa-cocktail" style="color: yellow; font-size: 20px;"></i> <span>Our Cocktails</span>'.html_safe, cocktails_path %></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-direction: row-reverse;">
     <form action='/search' class="form-inline my-2 my-lg-0">
