--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fascinate&display=swap');
 
 // BANNER
+.navbar > a > span {
+  font-family: 'Fascinate', cursive;
+}
 .btn-gradient {
   color: white;
   padding: 8px 24px;
